tests/errors/comprehensive/E5008_wrong_arg_count.ez
/*
 * Error Test: E5008 - wrong-argument-count
 * Expected: "wrong number of arguments"
 */

do add(a int, b int) -> int {
    return a + b
}

do main() {
    temp x int = add(1)  // Missing second argument
}
